--- a/Vs2008Integration/VSPackage.resx
+++ b/Vs2008Integration/VSPackage.resx
@@ -123,6 +123,9 @@
   <data name="112" xml:space="preserve">
     <value>SpecFlow by TechTalk</value>
   </data>
+  <data name="113" xml:space="preserve">
+    <value>A2HZQIPAERE9ZDQCIRP1PAR3RKKZQADICMQAARRHR0EEPDPHZQIEKKIKRJHTMCKAQZKKKPAMMTCHIQQKPIAZKAQQD3CJHQJHKPPKQDCQCTCIH9CQQAAMQQCKJ3IRJ1KE</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="400" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Package.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
