--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
-2017.3.0? - 2018/xx/xx
+2019.0 - 2019-04-25
+
++ Add error message to generated code-behind when SpecFlow is not installed in the project
++ Improved error message when the SpecFlow version of generated code does not match the installed SpecFlow version
+
+2017.3.0?- 2018/xx/xx
 
 + Remove Visual Studio 2013 support
 + Move SpecFlow item templates into their own category in "Add New Item" dialog
