Update copyrights for the vsix packages

--- a/TechTalk.SpecFlow.VsIntegration.Implementation/VSPackage.resx
+++ b/TechTalk.SpecFlow.VsIntegration.Implementation/VSPackage.resx
@@ -118,11 +118,11 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="110" xml:space="preserve">
-    <value>TechTalk SpecFlow</value>
+    <value>SpecFlow Team</value>
   </data>
   <data name="112" xml:space="preserve">
-    <value>TechTalk SpecFlow - Binding business requirements to .NET code, http://www.specflow.org
-Copyright © 2009–2017 TechTalk</value>
+    <value>SpecFlow - Binding business requirements to .NET code, http://www.specflow.org
+Copyright © SpecFlow Team</value>
   </data>
   <data name="121" xml:space="preserve">
     <value>SpecFlow</value>
