--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+Upcoming
+
++ Changed default directory for generating steps file to the same directory as the .feature file 
+
 2019.0 - 2019-04-25
 
 + Add error message to generated code-behind when SpecFlow is not installed in the project
