--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 Upcoming
 
-+ Changed default directory for generating steps file to the same directory as the .feature file 
++ Fix ObjectDisposedException when opening and closing a second window for the same feature file
++ Changed default directory for generating steps file to the same directory as the .feature file
 
 2019.0 - 2019-04-25
 
