--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 Upcoming
 
++ Add SpecFlow project template for Visual Studio 2017 and 2019
 + Fix ObjectDisposedException when opening and closing a second window for the same feature file
 + Changed default directory for generating steps file to the same directory as the .feature file
 
