--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 Upcoming
 + Fix styling issues in the Project Template Wizard
 + Add support for .NET Core 5 in the Project Template Wizard 
++ Update the feature file templates
+
+2019.0.71 - 2020-12-09
++ Fix: Renaming a step should not change the parameters
 
 2019.0.68 - 2020-11-13
 
