--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
 Upcoming
++ Update nunit package reference in project templates
+
+2019.0.83 - 2021-04-01
 + Update guidance sequence
 
 2019.0.80 - 2021-02-17
