--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 Upcoming
 + Update nunit package reference in project templates
++ Fix specflow.json template to generate a valid configuration
 
 2019.0.83 - 2021-04-01
 + Update guidance sequence
