--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2019.0.94 - 2021-06-18
++ Remove \r character after table formatting if the file did not have it before
++ Update project templates
++ Update SpecFlow icons
+
 2019.0.91 - 2021-05-19
 + Update nunit package reference in project templates
 + Fix specflow.json template to generate a valid configuration
