--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Upcoming
++ Add notification support
+ 
 2019.0.94 - 2021-06-18
 + Remove \r character after table formatting if the file did not have it before
 + Update project templates
